# edge-wasi-runtime

./: .env  .gitignore  Dockerfile  PORTFOLIO_README.md  PORTFOLIO_UPDATE.md  README.md  SHOWCASE.md  docker-compose.yml
config/: host.toml  hub.toml  pizero.toml  spoke.toml
docs/: advanced_architecture.md  generic_hal_architecture.md  system-architecture.md  system_architecture_deep_dive.md
host/: Cargo.toml
host/src/: config.rs  domain.rs  gpio.rs  hal.rs  main.rs  runtime.rs
pizero-native/: pizero-native.service  pizero_service.py
plugins/bme680/: app.py
plugins/dashboard/: app.py
plugins/dht22/: app.py
plugins/oled/: app.py
plugins/pi-monitor/: app.py
plugins/pi4-monitor/: app.py
plugins/pizero-monitor/: app.py
plugins/revpi-monitor/: app.py
plugins/sensor/: app.py
scripts/: build-plugins-wsl.sh  build-plugins.sh  deploy-pizero-native.sh  install-service.sh  run-host.sh  start-system.sh  test-buzzer-api.sh  test-buzzer.sh  test-dht22.sh  update-all-nodes.sh  update-configs.sh  update-host.sh  update-plugins.sh
wit/: plugin.wit
