[package]
name = "wasi-host"
version = "0.1.0"
edition = "2021"
description = "A Rust host that runs Python WASM plugins via WASI Component Model"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/wasi-python-host"

# ==============================================================================
# DEPENDENCIES EXPLAINED
# ==============================================================================

[dependencies]
# WASMTIME - The WebAssembly runtime
# This is the "engine" that executes WASM modules. It's developed by the
# Bytecode Alliance (Mozilla, Fastly, Intel, Red Hat).
# The "component-model" feature enables WASI Preview 2 support.
wasmtime = { version = "29", features = ["component-model"] }

# WASMTIME-WASI - WASI implementation for wasmtime
# Provides system capabilities (stdio, filesystem, clocks) to WASM modules.
# Think of it as the "operating system" for your WASM sandbox.
wasmtime-wasi = "29"

# TOKIO - Async runtime
# WASM component model operations are async, so we need an async runtime.
tokio = { version = "1", features = ["full"] }

# ANYHOW - Error handling
# Makes error propagation cleaner with the ? operator.
anyhow = "1"

# AXUM - Web framework
# Serves the dashboard. Lightweight and async-native.
axum = "0.7"

# TOWER-HTTP - HTTP middleware
# Provides CORS layer for the web server.
tower-http = { version = "0.5", features = ["cors"] }

# SERDE - Serialization
# For JSON API responses.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTIFY - File watching (for hot-reload)
# Watches plugin files and triggers reload when they change.
notify = "6"

# SYSINFO - System statistics
# Used to read memory usage, CPU load, and uptime for the pi-monitor plugin.
sysinfo = "0.30"

# TOML - Configuration parsing
# Reads host.toml for runtime configuration without recompilation.
toml = "0.8"

# RPPAL - Raspberry Pi Peripheral Access Library
# Provides direct hardware access to GPIO, I2C, SPI, PWM, and UART.
# This enables the "Generic HAL" architecture where plugins can use raw I/O.
# Note: Only works on Raspberry Pi (ARM). Build will fail on x86.
rppal = "0.19"

# HEX - Hex encoding/decoding
# Used for i2c/spi data transfer due to componentize-py marshalling limitations.
hex = "0.4"
