[package]
name = "wasi-host"
version = "0.1.0"
edition = "2021"
description = "A Rust host that runs Python WASM plugins via WASI Component Model"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/wasi-python-host"

# ==============================================================================
# DEPENDENCIES EXPLAINED
# ==============================================================================

[dependencies]
# WASMTIME - The WebAssembly runtime
wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = "29"

# TOKIO - Async runtime
tokio = { version = "1", features = ["full"] }

# ANYHOW
anyhow = "1"

# AXUM - Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# SERDE
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NOTIFY
notify = "6"

# SYSINFO
sysinfo = "0.30"

# TOML
toml = "0.8"

# REQWEST
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# RPPAL - Raspberry Pi Peripheral Access Library
# Made OPTIONAL so we can compile on WSL/x86 without errors.
rppal = { version = "0.19", optional = true }

# HEX
hex = "0.4"

# TRACING (Structured Logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLAP (CLI Args)
clap = { version = "4", features = ["derive"] }

[features]
default = []
# "hardware" feature enables rppal. If disabled (default), we use Mock HAL.
hardware = ["dep:rppal"]
